--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -1,7 +1,7 @@
 *{
 font-family: 'Arial';
 }
-.clearfix { clear: bot  ; }
+.clearfix { clear: both  ; }
 .container{
   width: 100%;
   margin: 0 0;
